--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^2.2.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-moment": "^0.9.7",
+    "react-scripts": "3.4.0",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
